# freenas-vm-tools

./: CMakeLists.txt  README.md  requirements.txt  setup.py
freenas/vmtools/: main.py
freenas/vmtools/plugins/: ClipboardPlugin.py  ProcessPlugin.py  SystemInfoPlugin.py
package/: build.sh
package/deb/: control
package/pkg/: +MANIFEST
plugins/: File.cc  Network.cc  System.cc  Time.cc  file.cc  network.cc  system.cc
rcng/: freenas-vm-tools  freenas_vm_tools
sbin/: vmtoolsd
src/: Config.hh.in  Context.cc  Context.hh  Device.hh  Server.cc  Server.hh  Utils.cc  Utils.h  config.hh  context.cc  context.hh  device.hh  json.hh  loader.hh  main.cc  main.py  server.cc  server.hh  transport.py  utils.cc  utils.hh
systemd/: freenas-vm-tools.service
unix/: Main.cc  UnixDevice.cc  UnixDevice.hh  main.cc  unix_device.cc  unix_device.hh  unix_loader.cc  unix_loader.hh
upstart/: freenas-vm-tools.conf
windows/: main.cc
